# WealthOS

./: .gitignore  .gitmodules  .markdownlint.json  .mcp.json  Dockerfile  README.md  architecture.md  backend  core_components.md  core_principles.md  development_roadmap.md  docker-compose.yml  principle_cn.md  principle_en.md  project-meta.json  project_overview.md  setup_guide.md  tech_stack.md
.cursor/rules/: @wealthos.mdc  code_pattern_preferences.mdc  code_workflow_guides.mdc  fastapi.mdc  langgraph.mdc  lib.mdc  most_important_rules.mdc  nextjs.mdc  teck_stack.mdc
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
app/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  README_FOF_SYSTEM.md  SUMMARY_FUND_IMPROVEMENTS.md  integration_test.py  main.py  main_legacy.py  mock_api_server.py  pyproject.toml  status.py  test_apis.py  test_workflow.py
backend/app/: __init__.py  main.py
backend/app/analysis/fof/: portfolio_analysis.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  users.py
backend/app/api/v1/: __init__.py  fund_analysis.py
backend/app/api/v1/endpoints/: crypto.py  market_data.py  price.py  prices.py
backend/app/core/: config.py  database.py  models.py
backend/app/schemas/: assets.py  character.py  fund_analysis.py  market_data.py  prices.py
backend/app/services/: __init__.py  cache_service.py  crypto_market_data.py  data_provider_service.py  langsmith_service.py  llm_service.py  price_service.py  protocols.py
backend/app/services/providers/: __init__.py  akshare_provider.py  alpha_vantage.py  binance_price_provider.py  binance_provider.py  coingecko.py  mock_provider.py  yahoo_provider.py  yfinance_provider.py
backend/app/workflows/: base.py  fund_advisory.py  image_analysis.py
backend/tests/: test_bitcoin_history_endpoint.py  test_data_provider_service.py  test_fof_system.py  test_fund_analysis.py  test_fund_data_comprehensive.py  test_fund_data_excel.py  test_fund_scraper.py  test_qwen_analysis.py  test_results_summary.md
backend/tests/debug_output/: fund_000001_page.html  fund_000001_script_18.js  fund_000001_script_3.js  fund_000001_script_8.js
docs/: CONFIG.md  architecture.md  assistant_character_prompts.md  btc_price_history_implementation.md  character_advisor_implementation.md  chat_agent_system_guide.md  chinese_column_mapping_fix.md  core_components.md  core_principles.md  day3-4_implementation_summary.md  development_roadmap.md  fund_advisor_final_status.md  fund_advisor_implementation_status.md  mindmap.md  mvp_macos_export.md  mvp_macos_setup_guide.md  peace_of_mind_implementation_plan.md  peace_of_mind_prd.md  project_overview.md  screenshot_analysis_mvp_plan.md  setup_guide.md  simplified_advisory_architecture.md  simulator_improvements.md  task_plan.md  tech_stack.md  wealthos_mvp.ics
docs/history/: day3-4_backend_implementation_plan.md
frontend/: .env.local.example  BACKEND_STREAMING_ANALYSIS.md  CURRENT_IMPLEMENTATION_DOCS.md  Dockerfile  FUND_ADVISOR_README.md  FUND_ANALYSIS_README.md  README.md  STREAMING_IMPROVEMENT_PLAN.md  package.json  pnpm-lock.yaml  tailwind.config.js  test-connection.js  test-fund-analysis.js  test-fundadvisor.js  test-streaming.js  tsconfig.app.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
wechat-taro/: .gitignore  README.md  README_FUND_ANALYSIS.md  package.json  pnpm-lock.yaml  project.config.json  project.config.json.template  test-backend.js
(+44 files in other folders)
